--- a/src/components/covid/css/Covid.css
+++ b/src/components/covid/css/Covid.css
@@ -1,46 +1,52 @@
-.covid-content {
+.covid-app {
     background-color: black;
     padding-top: 30px;
     padding-bottom: 100px;
+    width: 100%;
+}
+
+.covid-content {
+    display: flex;
+    width: 100%;
 }
 
 .switch-wrap {
-    display: flex;
-    justify-content: center;
+    width: 20%;
 }
 
 .switch {
     display: flex;
+    flex-direction: column;
     border-radius: 10px;
-    width: 1200px;
 }
 
-.switch button {
-    border: 1px solid black;
-    border-top: 0;
-    border-bottom: 0;
+.switch-main-btn {
     outline: 0;
-    padding: 20px;
-    width: 400px;
-    font-size: 30px;
-    height: 80px;
-    background-color: white;
+    border: 0;
+    margin-top: 30px;
     cursor: pointer;
-}
-
-.switch button:hover {
-    background-color: rgb(50,50,250);
+    background-color: transparent;
     color: white;
+    font-size: 30px;
+    width: 100%;
 }
 
-.switch button:first-child {
-    border: 0;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
+.switch-specify-wrap {
 }
 
-.switch button:last-child {
+.switch-specify-btn {
+    color: white;
+    cursor: pointer;
+    width: 100%;
+    background-color: transparent;
+    outline: 0;
     border: 0;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+}
+
+.graph {
+    width: 80%;
+}
+
+.hidden {
+    display: none;
 }
